Se grafican los puntos en el mapa con la informacion de preguntas

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -18,7 +18,7 @@
 		<script src="{% static 'js/jquery.min.js'%}"></script>
 		<!--Funcionalidaddes para leaflef -->
 		<link   rel="stylesheet"   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"  />
-    	<script type="text/javascript" src="/static/js/planes.js">></script>
+    	<script type="text/javascript" src="/static/js/localizaciones.js">></script>
     	
 		
 		<div id="home" class="header">
