--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -11,9 +11,10 @@
 <table class="table table-striped">
             <thead>
             <tr>
-                <th>Pregunta</th>
-                <th>Puntaje</th>
                 <th>Titulo</th>
+                <th>Puntaje</th>
+                <th>Tags</th>
+                <th>Contenido de la pregunta</th>
             </tr>
             </thead>
             <tbody> 
@@ -22,14 +23,38 @@
 <tr>
 <td>{{ icon.items.0.title }}</td>
 <td>{{icon.items.0.score}}</td>
+<td>{{icon.items.0.tags}}</td>
 <td>{{ icon.items.0.body}}</td>
 </tr>
 {% endfor %}
 </tbody>
 </table>
+<!--Tabla par avisualizar Respuestas  -->
+<table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Title</th>
+                <th>Puntaje</th>
+                <th>Contenido de la Respuesta</th>
+            </tr>
+            </thead>
+            <tbody> 
+
+{% for icon2 in consulta2 %}
+<tr>
+<td>{{ icon2.items.0.title }}</td>
+<td>{{icon2.items.0.score}}</td>
+<td>{{ icon2.items.0.body}}</td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+
+
+
+
 
 <h1>-----------Siguiente Pregunta-----------------</h1>
-
 <div class="col-md-12 portfolio-item">
             <hr>
             <div class="pagination">
