--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,19 @@ body a{
 	-ms-transition:0.5s all;
 }
 /*-----start-header----*/
+td#pregunta{
+	text-align: justify;
+}
+
+td#pregunta p a img{
+	max-width: 400px;
+	 display: block;
+    margin: 0 auto;
+}
+
+
+
+
 .header{
 }
 .logo{
