Arreglan los cursores del mapa dalta colocar las entidades en diferente icono

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -19,6 +19,7 @@
 		<!--Funcionalidaddes para leaflef -->
 		<link   rel="stylesheet"   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"  />
     	<script type="text/javascript" src="/static/js/localizaciones.js">></script>
+    	<script type="text/javascript" src="/static/js/organizaciones.js">></script>
     	
 		
 		<div id="home" class="header">
