--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,13 +22,19 @@ td#pregunta{
 }
 
 td#pregunta p a img{
-	max-width: 400px;
+	max-width: 500px;
 	 display: block;
     margin: 0 auto;
 }
 
-
-
+td#entidades{
+	background:#0408B4;
+	float: left;
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    border: 1px solid rgba(0, 0, 0, .2)
+}
 
 .header{
 }
