--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -26,15 +26,16 @@
 <td>{{ icon.items.0.title|safe}}</td>
 <td>{{icon.items.0.score|safe}}</td>
 <td>{{icon.items.0.tags|safe}}</td>
-<td id="pregunta">{{ icon.items.0.body|safe}}</td>
-<td id="entidades">
-Date:{{icon.entidades.DATE}} <br>
-Person:{{icon.entidades.PERSON}}<br>
-Location:{{icon.entidades.LOCATION}}<br>
-Organization:{{icon.entidades.ORGANIZATION}}<br>
-Money:{{icon.entidades.MONEY}}<br>
-Percent:{{icon.entidades.PERCENT}}<br>
-Time:{{icon.entidades.TIME}}
+<td id="pregunta">
+{{ icon.items.0.body|safe}}<br> 
+Link: <a href={{icon.items.0.link|safe}}>Click Aqui para verificar la información</a> </td>
+<td >
+Person:{{icon.entidades.0.PERSON}}<br>
+Location:{{icon.entidades.1.LOCATION.0.y0}}<br>
+Date:{{icon.entidades.2.DATE}} <br>
+Organization:{{icon.entidades.3.ORGANIZATION}}<br>
+Money:{{icon.entidades.4.MONEY}}<br>
+Time:{{icon.entidades.5.TIME}}
 </td>
 
 </tr>
