se incluyen las entidades de la respuestas en la visualizacion

--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -58,6 +58,14 @@ Time:{{icon.entidades.5.TIME}}
 <td>{{ icon2.items.0.title|safe}}</td>
 <td>{{ icon2.items.0.score|safe}}</td>
 <td id="pregunta">{{ icon2.items.0.body|safe}}</td>
+<td >
+Person:{{icon2.entidades.0.PERSON}}<br>
+Location:{{icon2.entidades.1.LOCATION.0.y0}}<br>
+Date:{{icon2.entidades.2.DATE}} <br>
+Organization:{{icon2.entidades.3.ORGANIZATION}}<br>
+Money:{{icon2.entidades.4.MONEY}}<br>
+Time:{{icon2.entidades.5.TIME}}
+</td
 </tr>
 {% endfor %}
 </tbody>
