Visualiza localizaciones y organizaciones en el mapa, se crea la vista de relaciones para las preguntas y se incluye los tuits asociados para cada pregunta

--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -101,6 +101,29 @@ Time:{{icon2.entidades.5.TIME}}
 </tbody>
 </table>
 
+
+<!-- TUITS PREGUNTAS-->
+<table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Tuits</th>
+                <th>Tuits</th>
+                <th>Tuits</th>
+            </tr>
+            </thead>
+            <tbody> 
+
+{% for iteracion4 in tuits %}
+
+<tr>
+<td>{{iteracion4.a}}</td>
+<td>{{iteracion4.e}}</td>
+<td>{{iteracion4.i}}</td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+
 <div class="col-md-12 portfolio-item">
             <hr>
             <div class="pagination">
@@ -119,11 +142,6 @@ Time:{{icon2.entidades.5.TIME}}
                 </span>
             </div>
         </div>
-
-
-
-
-
 
     </div>
 
