--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -20,6 +20,7 @@
 		<link   rel="stylesheet"   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"  />
     	<script type="text/javascript" src="/static/js/localizaciones.js">></script>
     	<script type="text/javascript" src="/static/js/organizaciones.js">></script>
+    	<script src="/static/js/markercluster-src.js"></script>
     	
 		
 		<div id="home" class="header">
@@ -31,14 +32,16 @@
 						<!----start-top-nav---->
 						 <nav class="top-nav">
 							<ul class="top-nav">
-								<!--
+								
 								<li><a href="/" class="scroll">INICIO</a><span> </span></li>
 								<li><a href="/#about" class="scroll">Grupo 14 </a></li>
+								<!--
 								<li><a href="/grafo" >Taller 2</a></li>
 								<li><a href="/Taller3" >Taller 3 </a><span> </span></li>
 								<li><a href="/tagcloud" >TagCloud</a></li>
 								<li><a href="/punto3" >Punto3</a></li>  -->
 								<li><a href="/taller4_parte1" >Questions</a></li>
+								<li><a href="/taller4_parte5">Relaciones</a></li>
 								<li><a href="/taller4_parte2" >TagCloud</a></li>
 								<li><a href="/taller4_parte3">GeoPlaces</a></li>
 								<li><a href="/taller4_parte4">DemoVivo</a></li>
