--- a/apps/plantilla/templates/taller4_parte3.html
+++ b/apps/plantilla/templates/taller4_parte3.html
@@ -22,21 +22,19 @@
     });
 
        //organizaciones
-    var empresas = L.icon({
-        iconUrl: '/static/images/organizaciones.png',
-        iconSize:     [15, 45], // size of the icon 38 95
-        iconAnchor:   [12, 42], // point of the icon which will correspond 22 94to marker's location
+    var lugares = L.icon({
+        iconUrl: '/static/images/cursorrojo.svg',
+        iconSize:     [45, 45], // size of the icon 38 95
+        iconAnchor:   [45, 45], // point of the icon which will correspond 22 94to marker's location
+        popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+    }); 
+        var empresas = L.icon({
+        iconUrl: '/static/images/cursorazul.svg',
+        iconSize:     [45, 45], // size of the icon 38 95
+        iconAnchor:   [45, 45], // point of the icon which will correspond 22 94to marker's location
         popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
     }); 
 
-    var icono = {
-    radius: 8,
-    fillColor: "#ff7800",
-    color: "#000",
-    weight: 1,
-    opacity: 1,
-    fillOpacity: 0.8
-};
 
         var map = L.map('map').setView([46.743346983097744, -27.74368660000005], 3); //se pone el centro del mapa y el nivel de zoom
         mapLink = 
@@ -47,22 +45,25 @@
             maxZoom: 18,
             }).addTo(map);
 
+        //var markerClusters = L.markerClusterGroup();
 
         for (var i = 0; i < localizaciones.length; i++) {
-            marker = new L.marker([localizaciones[i][1],localizaciones[i][2]],{icon:paises})
+            marker = new L.marker([localizaciones[i][1],localizaciones[i][2]],{icon:lugares})
 
                 .bindPopup(localizaciones[i][0])
                 .addTo(map);
+                //markerClusters.addLayer( marker );
         }
+         //map.addLayer( markerClusters );  
+ 
 
         for (var i = 0; i < organizaciones.length; i++) {
-            marker2 = new L.marker2([organizaciones[i][1],organizaciones[i][2]],{icon:empresas})
-
+           marker = new L.marker([organizaciones[i][1],organizaciones[i][2]],{icon:empresas})
                 .bindPopup(organizaciones[i][0])
                 .addTo(map);
+                 
         }
-           
- 
+
               
     </script>
 
