--- a/apps/plantilla/templates/taller4_parte1.html
+++ b/apps/plantilla/templates/taller4_parte1.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div id="pregunta">
-
+<!-- TABLA DE PREGUNTAS -->
 <table class="table table-striped">
             <thead>
             <tr>
@@ -25,17 +25,62 @@
 <tr>
 <td>{{ icon.items.0.title|safe}}</td>
 <td>{{icon.items.0.score|safe}}</td>
-<td>{{icon.items.0.tags|safe}}</td>
+
+ <td> 
+    {% for icon2 in icon.items.0.tags %}
+    <p>*{{icon2}}<br></p>
+    {% endfor %} </td>
+
 <td id="pregunta">
 {{ icon.items.0.body|safe}}<br> 
 Link: <a href={{icon.items.0.link|safe}}>Click Aqui para verificar la información</a> </td>
 <td >
-Person:{{icon.entidades.0.PERSON}}<br>
-Location:{{icon.entidades.1.LOCATION.0.y0}}<br>
-Date:{{icon.entidades.2.DATE}} <br>
-Organization:{{icon.entidades.3.ORGANIZATION}}<br>
-Money:{{icon.entidades.4.MONEY}}<br>
-Time:{{icon.entidades.5.TIME}}
+
+    {% for icon2 in icon.entidades.0.PERSON %}
+        {% if  icon.entidades.0.PERSON != " "%}
+        Personas:
+             <p>*{{icon2.p0}}{{icon2.p1}}{{icon2.p2}}{{icon2.p3}}{{icon2.p4}}{{icon2.p5}}{{icon2.p6}}{{icon2.p7}}{{icon2.p8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon.entidades.1.LOCATION %}
+        {% if  icon.entidades.1.LOCATION != " "%}
+        Lugares:
+             <p>*{{icon3.y0}}{{icon3.y1}}{{icon3.y2}}{{icon3.y3}}{{icon3.y4}}{{icon3.y5}}{{icon3.y6}}{{icon3.y7}}{{icon3.y8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon.entidades.2.DATE %}
+        {% if  icon.entidades.2.DATE != " "%}
+        Fechas:
+             <p>*{{icon3.k0}}{{icon3.k1}}{{icon3.k2}}{{icon3.k3}}{{icon3.k4}}{{icon3.k5}}{{icon3.k6}}{{icon3.k7}}{{icon3.k8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon.entidades.3.ORGANIZATION %}
+        {% if  icon.entidades.3.ORGANIZATION != " "%}
+        Organizaciones:
+             <p>*{{icon3.l0}}{{icon3.l1}}{{icon3.l2}}{{icon3.l3}}{{icon3.l4}}{{icon3.l5}}{{icon3.l6}}{{icon3.l7}}{{icon3.l8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+
+
+    {% for icon3 in icon.entidades.4.MONEY %}
+        {% if  icon.entidades.4.MONEY != " "%}
+        Dinero:
+             <p>*{{icon3.m0}}{{icon3.m1}}{{icon3.m2}}{{icon3.m3}}{{icon3.m4}}{{icon3.m5}}{{icon3.m6}}{{icon3.m7}}{{icon3.m8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+
+    {% for icon3 in icon.entidades.5.TIME %}
+        {% if  icon.entidades.5.TIME != " "%}
+        Tiempos:
+             <p>*{{icon3.n0}}{{icon3.n1}}{{icon3.n2}}{{icon3.n3}}{{icon3.n4}}{{icon3.n5}}{{icon3.n6}}{{icon3.n7}}{{icon3.n8}}</p>
+        {% endif %}
+    {% endfor %} 
+
 </td>
 
 </tr>
@@ -44,7 +89,7 @@ Time:{{icon.entidades.5.TIME}}
 </table>
 </div>
 
-
+<!-- TABLA DE RESPUESTAS -->
 <table class="table table-striped">
             <thead>
             <tr>
@@ -61,12 +106,61 @@ Time:{{icon.entidades.5.TIME}}
 <td>{{ icon2.items.0.score|safe}}</td>
 <td id="pregunta">{{ icon2.items.0.body|safe}}</td>
 <td >
-Person:{{icon2.entidades.0.PERSON}}<br>
+
+
+{% for icon3 in icon2.entidades.0.PERSON %}
+        {% if  icon2.entidades.0.PERSON != " "%}
+        Personas:
+             <p>*{{icon3.p0}}{{icon3.p1}}{{icon3.p2}}{{icon3.p3}}{{icon3.p4}}{{icon3.p5}}{{icon3.p6}}{{icon3.p7}}{{icon3.p8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon2.entidades.1.LOCATION %}
+        {% if  icon2.entidades.1.LOCATION != " "%}
+        Lugares:
+             <p>*{{icon3.y0}}{{icon3.y1}}{{icon3.y2}}{{icon3.y3}}{{icon3.y4}}{{icon3.y5}}{{icon3.y6}}{{icon3.y7}}{{icon3.y8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon2.entidades.2.DATE %}
+        {% if  icon2.entidades.2.DATE != " "%}
+        Fechas:
+             <p>*{{icon3.k0}}{{icon3.k1}}{{icon3.k2}}{{icon3.k3}}{{icon3.k4}}{{icon3.k5}}{{icon3.k6}}{{icon3.k7}}{{icon3.k8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+    {% for icon3 in icon2.entidades.3.ORGANIZATION %}
+        {% if  icon2.entidades.3.ORGANIZATION != " "%}
+        Organizaciones:
+             <p>*{{icon3.l0}}{{icon3.l1}}{{icon3.l2}}{{icon3.l3}}{{icon3.l4}}{{icon3.l5}}{{icon3.l6}}{{icon3.l7}}{{icon3.l8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+
+
+    {% for icon3 in icon2.entidades.4.MONEY %}
+        {% if  icon2.entidades.4.MONEY != " "%}
+        Dinero:
+             <p>*{{icon3.m0}}{{icon3.m1}}{{icon3.m2}}{{icon3.m3}}{{icon3.m4}}{{icon3.m5}}{{icon3.m6}}{{icon3.m7}}{{icon3.m8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+
+    {% for icon3 in icon2.entidades.5.TIME %}
+        {% if  icon2.entidades.5.TIME != " "%}
+        Tiempos:
+             <p>*{{icon3.n0}}{{icon3.n1}}{{icon3.n2}}{{icon3.n3}}{{icon3.n4}}{{icon3.n5}}{{icon3.n6}}{{icon3.n7}}{{icon3.n8}}</p>
+        {% endif %}
+    {% endfor %} 
+
+<!-- Person:{{icon2.entidades.0.PERSON}}<br>
 Location:{{icon2.entidades.1.LOCATION.0.y0}}<br>
 Date:{{icon2.entidades.2.DATE}} <br>
 Organization:{{icon2.entidades.3.ORGANIZATION}}<br>
 Money:{{icon2.entidades.4.MONEY}}<br>
-Time:{{icon2.entidades.5.TIME}}
+Time:{{icon2.entidades.5.TIME}} -->
+
+
 </td
 </tr>
 {% endfor %}
@@ -79,10 +173,14 @@ Time:{{icon2.entidades.5.TIME}}
 <table class="table table-striped">
             <thead>
             <tr>
-                <th>Titulo</th>
+                <th>Score Imbd</th>           
+                <th>Título</th>
                 <th>Resumen</th>
-                <th>Pais</th>
                 <th>Director</th>
+                <th>Pais</th>
+                <th>Actores</th>
+                <th>Género</th>
+                <th>Duración</th>                
                 <th>Score Imbd</th>
             </tr>
             </thead>
@@ -91,10 +189,14 @@ Time:{{icon2.entidades.5.TIME}}
 {% for iteracion3 in movies %}
 
 <tr>
+<td >{{iteracion3.union.imdbRating|safe}}</td>
 <td>{{iteracion3.union.Title}}</td>
 <td>{{iteracion3.union.Plot}}</td>
-<td>{{iteracion3.union.Country|safe}}</td>
 <td >{{iteracion3.union.Director|safe}}</td>
+<td>{{iteracion3.union.Country|safe}}</td>
+<td >{{iteracion3.union.Actors|safe}}</td>
+<td >{{iteracion3.union.Genre|safe}}</td>
+<td >{{iteracion3.union.Runtime|safe}}</td>
 <td >{{iteracion3.union.imdbRating|safe}}</td>
 </tr>
 {% endfor %}
@@ -109,6 +211,7 @@ Time:{{icon2.entidades.5.TIME}}
                 <th>Tuits</th>
                 <th>Tuits</th>
                 <th>Tuits</th>
+                <th>Tuits</th>
             </tr>
             </thead>
             <tbody> 
@@ -119,6 +222,7 @@ Time:{{icon2.entidades.5.TIME}}
 <td>{{iteracion4.a}}</td>
 <td>{{iteracion4.e}}</td>
 <td>{{iteracion4.i}}</td>
+<td>{{iteracion4.o}}</td>
 </tr>
 {% endfor %}
 </tbody>
