Se incluye en el mapa maspuntos y las entidades ya se traen en orden

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -20,6 +20,7 @@
 		<link   rel="stylesheet"   href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"  />
     	<script type="text/javascript" src="/static/js/localizaciones.js">></script>
     	<script type="text/javascript" src="/static/js/organizaciones.js">></script>
+    	<script type="text/javascript" src="/static/js/personas.js">></script>
     	<script src="/static/js/markercluster-src.js"></script>
     	
 		
