Ultimos cambios ante s de cambiar los estilos

--- a/apps/plantilla/templates/relation.html
+++ b/apps/plantilla/templates/relation.html
@@ -23,6 +23,12 @@
  <td> 
     {% for icon2 in icon.items.0.tags %}
     <p>*{{icon2}}<br></p>
+    {% for icon3 in consulta2 %}
+        {% if iconn2 == iconn2 %}
+        <p>{{icon.items.0.question_id}}</p>
+            
+        {% endif %}
+    {% endfor %} 
     {% endfor %} </td>
 
 <td id="pregunta">{{ icon.items.0.body|safe}}<br> Link: <a href={{icon.items.0.link|safe}}>Click Aqui para verificar la información</a> </td>
