Visualizacion estable con algunos bugs

--- a/apps/plantilla/templates/menu.html
+++ b/apps/plantilla/templates/menu.html
@@ -21,8 +21,7 @@
     	<script type="text/javascript" src="/static/js/localizaciones.js">></script>
     	<script type="text/javascript" src="/static/js/organizaciones.js">></script>
     	<script type="text/javascript" src="/static/js/personas.js">></script>
-    	<script src="/static/js/markercluster-src.js"></script>
-    	
+
 		
 		<div id="home" class="header">
 					<div class="top-header">
@@ -54,7 +53,7 @@
 						</div>
 					</div>
 			</div>
-			<div >
+			<div id="contenido">
 			{% block content %}
 			{% endblock%}
 			</div>
