--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,90 @@
-/*--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
---*/
+
+
+
+/*estilos personalizados*/
+
+
+
+hr {
+                border: 0;
+                clear:both;
+                display:block;
+                width: 100%;
+                background-color:gray;
+                height: 1px;
+            }
+
+
+            #line {
+                float: left;
+                width: 100%;
+                height: 40px;
+            }
+div#score_pregunta{
+margin-top: 30px;
+}
+
+
+div#score_pregunta p {
+font-size:1.5em
+}
+
+h4#tags{
+    display:inline;
+    background-color:#819FF7;
+    color:#1C1C1C;
+}
+div#contenido{
+margin-top:40px;
+margin-left : 30px;
+margin-right : 30px;
+}
+
+div#titulo {
+text-align:center;
+font-weight: bold;
+font-size: 1.5em;
+}
+
+
+div#body_pregunta{
+text-align:justify;
+}
+div#pregunta p a img{
+	max-width: 400px;
+	 display: block;
+    margin: 0 auto;
+}
+
+/*PARA LA RESPUESTA */
+div#score_pregunta2 p {
+font-size:1.5em
+}
+
+
+div#body_pregunta2{
+text-align:justify;
+}
+
+div#score_movie{
+margin-top: 10px;
+}
+
+div#score_movie p {
+font-size:1.5em
+}
+
+
+div#otros_movies h5 {
+font-weight: bold;
+}
+
+
+
+
+
+
+/*----------------------*/
 html, body{
   	font-family: 'Lato', sans-serif;
     font-size: 100%;
@@ -22,7 +103,7 @@ td#pregunta{
 }
 
 td#pregunta p a img{
-	max-width: 500px;
+	max-width: 300px;
 	 display: block;
     margin: 0 auto;
 }
@@ -35,6 +116,20 @@ td#entidades{
     margin: 5px;
     border: 1px solid rgba(0, 0, 0, .2)
 }
+
+.Row
+{
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+    border-spacing: 10px;
+}
+.Column
+{
+    display: table-cell;
+    background-color: red;
+}
+
 
 .header{
 }
